# hd2m

./: Cargo.toml  README.md
.cargo/: config.toml
hd2m_cv/: Cargo.toml  README.md
hd2m_cv/examples/: arrow-feature-detection-poc.rs  arrow-template-matching-poc.rs  arrow-template-matching-use-poc.rs  arrow-template-matching-vanilla-opencv.rs  canny.rs  comparison-opencv-image.txt  edge-detection.rs  edge-test.rs  manager.rs  ndarray-offset-search.rs  ndarray-quantize.rs  ndarray-sliding-window-chunk.rs  ndarray-sliding-window.rs  ndarray-zip-diff-array.rs  sift-2.rs  sift-all-match.py  sift.rs  simple.rs  t.rs  template-matcher-sequencing.rs  template-matcher-test.rs  total.rs
hd2m_cv/src/: convert.rs  finder.rs  lib.rs  manager.rs  matcher.rs  scale.rs  screen_capture.rs  search.rs  template.rs
hd2m_cv/src/cv_convert/: mod.rs  with_opencv.rs  with_opencv_image.rs  with_opencv_ndarray.rs  with_opencv_windows_capture.rs
hd2m_gui/: Cargo.toml  README.md
hd2m_gui/examples/: fake-input-final-2.rs  input-bot-test.rs  inputbot.rs  raw-windows-api-test-2.rs  raw-windows-api-test.rs  rdev-test.rs
hd2m_gui/src/: _sample.rs  capture.rs  input_manager.rs  main.rs  screen_capture.rs
hd2m_gui/src/feature/: mod.rs  screen_capture.rs
hd2m_gui/src/util/: convert.rs  mod.rs
hd2m_search/: Cargo.toml  README.md
hd2m_search/examples/: ndarray-sliding-window.rs
hd2m_search/src/: finder.rs  lib.rs
hd2m_search/src/cv_convert/: mod.rs  with_opencv_image.rs
hd2m_utils/: Cargo.toml  README.md
hd2m_utils/examples/: ndarray-sliding-window-chunk.rs  test.rs
hd2m_utils/src/: finder.rs
hd2m_utils/src/cv_convert/: with_opencv_ndarray.rs
