[package]
name = "hd2m_cv"
description = "hd2m: Some computer-vision related utilities"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.81"
half = "2.4.0"
image = "0.25.0"
ndarray = { version = "0.15.6", features = ["rayon"] }
opencv = { version = "0.92.0", default-features = false, features = [
    "imgproc",
] }
powerboxesrs = "0.2.3"
rayon = "1.9.0"
