[package]
name = "hd2m_gui"
description = "hd2m: A GUI for the HD2M project"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
edition = "2021"

[dependencies]
hd2m_cv = { version = "0.1.0", path = "../hd2m_cv", features = [
    "windows-capture",
] }
hd2m_search = { version = "0.1.0", path = "../hd2m_search" }
iced = { version = "0.12.1", features = ["tokio"] }
image = "0.25.0"
opencv = { version = "0.88.8", default-features = false, features = [
    "imgproc",
] }
tokio = { version = "1.36.0", features = ["sync", "macros"] }
windows-capture = "1.0.68"
