[package]
name = "hd2m_gui"
description = "hd2m: A GUI for the HD2M project"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
hd2m_cv = { version = "0.1.0", path = "../hd2m_cv" }
iced = { version = "0.12.1", features = ["tokio"] }
image = "0.25.0"
opencv = { version = "0.89.0", default-features = false }
tokio = { version = "1.36.0", features = ["sync", "macros"] }
windows-capture = "1.0.68"
