[package]
name = "hd2m_search"
description = "hd2m: Some computer-vision related utilities"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.81"
ndarray = { version = "0.15.6", features = ["rayon"] }
strum = { version = "0.26.2", features = ["derive"] }
