[package]
name = "hd2m_utils"
description = "hd2m: Some computer-vision related utilities"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.81"
half = "2.4.0"
ndarray = { version = "0.15.6", features = ["rayon"] }
opencv = { version = "0.88.8", default-features = false, features = [] }
strum = { version = "0.26.2", features = ["derive"] }
